# unstructured

./: README.md  pyproject.toml
specs/: 001-FilesystemPlan.md  proposal.md
src/unstructured/: __init__.py  cli.py  plan.py  tree.py
tests/: test_cli.py  test_plan.py  test_tree.py
